VMDNS forwarding fixes
This change fixes a number of issues in VMDNS with forwarded queries:
  1) Add a timeout for connect() to the forwarder so it doesn't block for
     a long time when the server is unavailable.
  2) Add periodic interval timer event to event queue.
  3) Maintain a list of pending forwarder packet contexts.  When the
     the interval timer event triggers, expired entries are cleaned up.
  4) Use CLOCK_MONOTONIC instead of CLOCK_REALTIME so clock adjustment
     don't affect interval times.

Testing:
  I ran a set of DNS queries including:
    * UDP requests for existing records in zone
    * UDP requests for existing records out of zone
    * TCP requests for non-existing records in zone
    * TCP requests for non-existing records out of zone
  The tests were repeated with;
    * no forwarder configured
    * an available forwarder configured
    * an unavailable forwarder configured
  Fixed memory leaks and other issues reported by Valgrind.
  File descriptor leak for forwarded TCP queries fixed.
  Defensics DNS test suite

Change-Id: I14e380c7cdac3e17fda56f4f0b9c166cdfc071a8

--- a/vmdns/server/common/Makefile.am
+++ b/vmdns/server/common/Makefile.am
@@ -20,6 +20,7 @@ libsrvcommon_la_SOURCES = \
     lru.c                 \
     metricsenums.c        \
     nameEntry.c           \
+    packetlist.c          \
     recordlist.c          \
     recordobject.c        \
     registry.c            \
