Mutent CA: Implementation for all REST APIs
- Contains REST API server implementation for all the mutentca apis
  including: get version, get root/intermediate ca cert, create/revoke
  intermediate ca cert, get root/intermediate ca crl, get/revoke root/
  intermediate ca signed cert
- GET version API is fully implemented
- All other APIs will return success with "This api is not yet implemented"
  message in the response. This will be updated once the corresponding
  backend APIs are implemented.

Jira ID: CNA-1954, CNA-1955, CNA-2501

Change-Id: Iaed8bc9b954c93c9a2388244f5f1d628fb51a57d

--- a/mutentca/server/rest-head/Makefile.am
+++ b/mutentca/server/rest-head/Makefile.am
@@ -7,14 +7,18 @@ if REST_ENABLED
 
 libmutentcaresthead_la_SOURCES += \
     apiutil.c \
+    certificatesapi.c \
+    crlapi.c \
     globals.c \
     handler.c \
     httperror.c \
+    intermediatecaapi.c \
     openssl.c \
     operation.c \
     param.c \
     resource.c \
-    result.c
+    result.c \
+    rootcaapi.c
 
 endif
 
