Mutent CA: Cleanup db code
*Added lock for db context
*Moved logic from db utils to server common.
*Added unit tests for common APIs

*Ran unit tests and verified memcheck

Change-Id: I227fc2d5f2586f3b131830c5e7490c172aaf48cf

--- a/mutentca/tests/unit-tests/server/common/Makefile.am
+++ b/mutentca/tests/unit-tests/server/common/Makefile.am
@@ -5,6 +5,7 @@ TESTS = testmutentcasrvcommon
 
 testmutentcasrvcommon_SOURCES = \
     jsonutils.c \
+    structs.c \
     main.c
 
 testmutentcasrvcommon_CPPFLAGS = \
