--- a/mutentca/server/rest-head/Makefile.am
+++ b/mutentca/server/rest-head/Makefile.am
@@ -19,6 +19,7 @@ endif
 
 libmutentcaresthead_la_CPPFLAGS = \
     -I$(top_srcdir)/mutentca/include \
+    -I$(top_srcdir)/mutentca/include/public \
     -I$(top_srcdir)/mutentca/server/include \
     -I$(top_srcdir)/vmcommon/include/public \
     @LW_INCLUDES@ \
