CNA-2947: Util function to fetch HOTK token
With this changeset, MutentCA can now retrieve HOTK tokens for
authentication. It does so by fetching the certificate and private key
from the vecs in POST server. The commonName from the subject in the
certificate and the private key are used to get the HOTK token from the
Lightwave server.

Testing:
Along with the cmocka tests included in the changeset, retrieving a
token from a deployment of Lightwave + POST was also tested.

Change-Id: I1f69413615a45ce9bc973f25744acf9b54ee28ce

--- a/mutentca/server/common/Makefile.am
+++ b/mutentca/server/common/Makefile.am
@@ -3,18 +3,24 @@ noinst_LTLIBRARIES = libmutentcasrvcommon.la
 libmutentcasrvcommon_la_SOURCES = \
     api.c \
     jsonutils.c \
+    token_util.c \
+    pkcs_openssl.c \
     util.c
 
 libmutentcasrvcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/mutentca/include \
     -I$(top_srcdir)/mutentca/include/public \
     -I$(top_srcdir)/mutentca/server/include \
+    -I$(top_srcdir)/vmafd/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/oidc/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@ \
     @JANSSON_INCLUDES@
 
 libmutentcasrvcommon_la_LIBADD = \
     $(top_builddir)/mutentca/common/libcommon.la \
+    $(top_builddir)/vmidentity/ssoclients/oidc/src/libssooidc.la \
     @JANSSON_LIBS@
 
 libmutentcasrvcommon_la_LDFLAGS = \
