Mutent CA: Hmake support for integration tests
- This allows running mutentca integration tests with 1 hmake command
- Command to run these tests is "hmake test-mutentca"
  -- This will first run gen-mutentca-tests which will generate the go
     swagger client
  -- Next, the code is compiled and packed into the rpms and the test env
     is deployed by using these rpms in server, mutentca and client nodes
  -- Then a new container is spun up which installs lightwave client rpm,
     joins to the server, sets up the go test environment and runs the
     mutentca integration tests against server and mutentca nodes

Jira ID: CNA-2469

Change-Id: I33ce7e6cfd992977753393820ede50604f2d0945

--- a/mutentca/tests/integration-tests/go/src/.gitignore
+++ b/mutentca/tests/integration-tests/go/src/.gitignore
@@ -1,2 +1,7 @@
 # Ignore swagger generated folder/files
 gen/
+
+# Ignore folders created while running the tests
+github.com/
+golang.org/
+gopkg.in/
