add RFC4514 background db cross check job
1. add "cn=dbcrosscheckstatus" special search to kick off db cross check back ground job.
2. add a new backend interface to read/validate index table content per key/value
3. in db cross check back ground job, focus on:
3.1 DN integrity:
    * validate all existing DN in blob has compliance syntax.
      log eror if otherwise.
    * validate all existing DN in blob can perform DNtoID lookup correctly.
      log eror if otherwise.
    * validate all existing DN in blob can perform parentDNtoID lookup correctly.
      log eror if otherwise.
3.2 member table integrity:
    * validate all existing group member attribute has compliance syntax and normalized value.
      log eror if otherwise.
3.1 generic indexed attribute integrity:
    * a generic function to validate index table content matches with entry BLOB
      i.e. blob normalzied value should find its matching EID in index table.

TEST: run background job against vke and it DB.

Change-Id: Iddb977a3535473f874817717fd2546603d60e809

--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -15,6 +15,7 @@ libvmdird_la_SOURCES = \
     auth.c \
     background.c \
     dbbackup.c \
+    dbcrosschk.c \
     globals.c \
     heartbeat.c \
     index.c \
