Mutent CA: Moved pkcs api's from server to mutentca root directory
*pkcs api's will be used by mutent CA server/client modules. So moved to
root directory

Change-Id: Ib36c7b22f7e1a5928ce7059a3d18462849ecca07

--- a/configure.ac
+++ b/configure.ac
@@ -1886,6 +1886,7 @@ AC_CONFIG_FILES([Makefile
                  mutentca/config/Makefile
                  mutentca/config/mutentca.reg
                  mutentca/common/Makefile
+                 mutentca/pkcs/Makefile
                  mutentca/server/Makefile
                  mutentca/server/api/Makefile
                  mutentca/server/common/Makefile
