--- a/mutentca/server/common/Makefile.am
+++ b/mutentca/server/common/Makefile.am
@@ -4,7 +4,6 @@ libmutentcasrvcommon_la_SOURCES = \
     api.c \
     jsonutils.c \
     token_util.c \
-    pkcs_openssl.c \
     util.c
 
 libmutentcasrvcommon_la_CPPFLAGS = \
@@ -20,6 +19,7 @@ libmutentcasrvcommon_la_CPPFLAGS = \
 
 libmutentcasrvcommon_la_LIBADD = \
     $(top_builddir)/mutentca/common/libcommon.la \
+    $(top_builddir)/mutentca/pkcs/libmutentcapkcs.la \
     $(top_builddir)/vmidentity/ssoclients/oidc/src/libssooidc.la \
     @JANSSON_LIBS@
 
