VMDNS: add zone forwarding
This change adds the ability to configure forwarders for
specific zones.  Only queries for names in a forwarder
zone will be sent to that forwarder.

Create a forwarder zone:

  vmdns-cli add-zone <zone> --type forwarder

Add a forwarder to the zone:

  vmdns-cli add-forwarder <addr> --zone <zone>

List the forwarders for the zone:

  vmdns-cli list-forwarders --zone <zone>

Change-Id: If83cb85998e45328ba980e82e09b5f1f91d3551a

--- a/vmdns/common/Makefile.am
+++ b/vmdns/common/Makefile.am
@@ -16,6 +16,7 @@ libcommon_la_SOURCES = \
     globals.c  \
     logging.c \
     memory.c  \
+    property.c \
     record.c  \
     record-a.c  \
     record-aaaa.c  \
