MutentCA: Implement Policy engine util functions
- Implemented util functions (init/free/copy) for the structs defined
  in mutentcapolicy.h header file
- Implemented unit-tests for these util functions
- PolicyInitCtx function needs to call the config parser to get the data
  from config file into the context (to be implemented in next commit)
- PolicyValidate function will call each individual validate functions
  (to be implemented in subsequent commits)

Jira ID: CNA-1967

Change-Id: I009f421608b122e1edcc2cb2f36e9457fc7d944e

--- a/configure.ac
+++ b/configure.ac
@@ -1940,6 +1940,7 @@ AC_CONFIG_FILES([Makefile
                  mutentca/server/config/Makefile
                  mutentca/server/db/Makefile
                  mutentca/server/plugin/Makefile
+                 mutentca/server/policy/Makefile
                  mutentca/server/rest-head/Makefile
                  mutentca/server/mutentca/Makefile
                  mutentca/tests/Makefile
@@ -1955,6 +1956,7 @@ AC_CONFIG_FILES([Makefile
                  mutentca/tests/unit-tests/server/plugin/test-plugins/testplugin-invalidvtable/Makefile
                  mutentca/tests/unit-tests/server/plugin/test-plugins/testplugin-valid/Makefile
                  mutentca/tests/unit-tests/server/plugin/test-plugins/testplugin-noentry/Makefile
+                 mutentca/tests/unit-tests/server/policy/Makefile
                  vmidentity/Makefile
                  vmidentity/config/setenv.sh
                  vmidentity/config/sample/setenv.sh
