[Watcher] API deifinitions for event subsystem
1) Defines structures and api for eventnode object.
2) Defines structures and apis for eventlist object.

Change-Id: I614c912a560c9ab9d656284f9a30e9d2d3943948

--- a/configure.ac
+++ b/configure.ac
@@ -1690,6 +1690,7 @@ AC_CONFIG_FILES([Makefile
                  lwraft/server/replication/Makefile
                  lwraft/server/saslvmdirdb/Makefile
                  lwraft/server/vmdir/Makefile
+                 lwraft/server/watchnotify/Makefile
                  lwraft/client/Makefile
                  lwraft/config/post.reg
                  lwraft/testing/Makefile
