MutentCA: Implement Policy config file parser
- Implemented the policy config file parser which parses the json
  object and initializes the policy context
- Unit tests added for all possible valid combinations and many
  different types of invalid combinations

Jira ID: CNA-1967

Change-Id: Idb78eac0925abca30c080aa8153cf7093c7abcd3

--- a/mutentca/server/policy/Makefile.am
+++ b/mutentca/server/policy/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LTLIBRARIES = libmutentcapolicy.la
 
 libmutentcapolicy_la_SOURCES = \
+    parse.c \
     policy.c \
     util.c
 
@@ -8,7 +9,8 @@ libmutentcapolicy_la_CPPFLAGS = \
     -I$(top_srcdir)/mutentca/include \
     -I$(top_srcdir)/mutentca/include/public \
     -I$(top_srcdir)/mutentca/server/include \
-    @LW_INCLUDES@
+    @LW_INCLUDES@ \
+    @JANSSON_INCLUDES@
 
 libmutentcapolicy_la_LIBADD = \
     $(top_builddir)/mutentca/common/libcommon.la \
