MutentCA: Added unit tests for intermediate CA API
*Verified memcheck

Change-Id: I473abe4977af8ab8b3cd5d3c3c256871af970f6a
Jira-Id: CNA-2513

--- a/mutentca/tests/unit-tests/server/api/Makefile.am
+++ b/mutentca/tests/unit-tests/server/api/Makefile.am
@@ -30,4 +30,9 @@ testmutentcaapi_LDFLAGS = \
     -Wl,--wrap,LwCADbAddCA \
     -Wl,--wrap,LwCADbCheckCA \
     -Wl,--wrap,LwCADbGetCACertificates \
-    -Wl,--wrap,LwCADbGetCA
+    -Wl,--wrap,LwCADbGetCA \
+    -Wl,--wrap,LwCAKmCreateKeyPair \
+    -Wl,--wrap,LwCAKmGetPublickey \
+    -Wl,--wrap,LwCAKmGetEncryptedKey \
+    -Wl,--wrap,LwCAKmSignX509Cert \
+    -Wl,--wrap,LwCAKmSignX509Request
