add ca security implementation to mutentca - add config file - address review comments iter1
Change-Id: Iad3c9e590ba941ab5acebed86965605bf28cbe1e

--- a/configure.ac
+++ b/configure.ac
@@ -1947,6 +1947,7 @@ AC_CONFIG_FILES([Makefile
                  mutentca/server/api/Makefile
                  mutentca/server/common/Makefile
                  mutentca/server/config/Makefile
+                 mutentca/server/security/Makefile
                  mutentca/server/db/Makefile
                  mutentca/server/plugin/Makefile
                  mutentca/server/policy/Makefile
@@ -1960,6 +1961,9 @@ AC_CONFIG_FILES([Makefile
                  mutentca/tests/unit-tests/server/db/Makefile
                  mutentca/tests/unit-tests/server/db/test-mutentcadb-config/Makefile
                  mutentca/tests/unit-tests/server/db/test-mutentcadb-plugin/Makefile
+                 mutentca/tests/unit-tests/server/security/Makefile
+                 mutentca/tests/unit-tests/server/security/test-mutentcasecurity-config/Makefile
+                 mutentca/tests/unit-tests/server/security/test-mutentcasecurity-plugin/Makefile
                  mutentca/tests/unit-tests/server/plugin/Makefile
                  mutentca/tests/unit-tests/server/plugin/test-plugins/Makefile
                  mutentca/tests/unit-tests/server/plugin/test-plugins/testplugin-invalidvtable/Makefile
@@ -2034,5 +2038,10 @@ AC_CONFIG_LINKS([
 AC_CONFIG_LINKS([
                 mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-mutentcadb-config.json:mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-mutentcadb-config.json
                 ])
-
+AC_CONFIG_LINKS([
+                mutentca/tests/unit-tests/server/security/test-mutentcasecurity-config/test-mutentcasecurity-config.json:mutentca/tests/unit-tests/server/security/test-mutentcasecurity-config/test-mutentcasecurity-config.json
+                ])
+AC_CONFIG_LINKS([
+                mutentca/tests/unit-tests/server/security/test-mutentcasecurity-config/test-mutentcasecurity-data.json:mutentca/tests/unit-tests/server/security/test-mutentcasecurity-config/test-mutentcasecurity-data.json
+                ])
 AC_OUTPUT
