add config file parse and tests for casecurity aws kms impl - address review comments iter2
Change-Id: Iaf1204d384da661a2628cb3a6e62a1ec70003751

--- a/plugins/lwca_security_aws_kms/src/Makefile.am
+++ b/plugins/lwca_security_aws_kms/src/Makefile.am
@@ -9,6 +9,7 @@ liblwca_security_aws_kms_la_SOURCES = \
     aws_kms_api.cpp \
     aws_kms_crypto_helper.cpp \
     security.c \
+    security_config.c \
     security_pkcs.c
 
 liblwca_security_aws_kms_la_LIBADD = \
