engage vmcommon tests
Change-Id: Idc135fee037e27741421863072f45bee5a42169c

--- a/vmcommon/testing/Makefile.am
+++ b/vmcommon/testing/Makefile.am
@@ -1,5 +1,8 @@
 noinst_PROGRAMS = vmcommon_test
 
+check_PROGRAMS = vmcommon_test
+TESTS = $(check_PROGRAMS)
+
 vmcommon_test_SOURCES = \
     countertest.c \
     gaugetest.c \
