MuCA OIDC Token Validation and Authentication
* Enforces OIDC token present for REST requests
* Supports Bearer and HOTK-PK OIDC token types
* Verifies HOTK POP

Jira ID: CNA-1957
Jira ID: CNA-1958

Change-Id: Ie97c0136543b900602596f57c00e361c9eb71328

--- a/configure.ac
+++ b/configure.ac
@@ -1949,6 +1949,7 @@ AC_CONFIG_FILES([Makefile
                  mutentca/server/config/Makefile
                  mutentca/server/security/Makefile
                  mutentca/server/db/Makefile
+                 mutentca/server/oidc-auth/Makefile
                  mutentca/server/plugin/Makefile
                  mutentca/server/plugins/Makefile
                  mutentca/server/plugins/post/Makefile
