Refactor PKCS and HOTK Access Token to common
This is the first split of the ongoing work for CNA-2218 (Add POST
storage API to store Root CA with unit tests). The POST DB plugin will
make use of json utils, and HOTK Access Token util. The HOTK util uses
pkcs for parsing certificates. Since the POST plugin will be built as a
shared object, these libraries should be a part of the shared object.
Due to the previous implementation, there were challenges with
resolving the circular dependency between the libraries and
redeclaration of function definitions.

In this changeset, all the utils are moved into libcommon.

Testing:
  1. Get access token was tested against a POST deployment.
  2. make check was executed to see all the unit-tests pass.

Change-Id: I1b373c5da1c0c16399f3fbe864ce02530dfd4b01

--- a/mutentca/common/Makefile.am
+++ b/mutentca/common/Makefile.am
@@ -3,13 +3,16 @@ noinst_LTLIBRARIES = libcommon.la
 libcommon_la_SOURCES = \
     fsutils.c \
     globals.c \
+    jsonutils.c \
     logging.c \
     ldap.c \
     memory.c \
     misc.c \
     opensslctx.c \
+    pkcs.c \
     string.c \
     thread.c \
+    token_util.c \
     utils.c \
     vecs.c
 
@@ -18,15 +21,20 @@ libcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/mutentca/include \
     -I$(top_srcdir)/mutentca/include/public \
     -I$(top_srcdir)/vmafd/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/oidc/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
     @LW_INCLUDES@ \
-    @OPENSSL_INCLUDES@
+    @OPENSSL_INCLUDES@ \
+    @JANSSON_INCLUDES@
 
 libcommon_la_LIBADD = \
+    $(top_builddir)/vmidentity/ssoclients/oidc/src/libssooidc.la \
     @LBER_LIBS@ \
     @LDAP_LIBS@ \
     @LWREG_LIBS@ \
     @LWRSUTILS_LIBS@ \
-    @PTHREAD_LIBS@
+    @PTHREAD_LIBS@ \
+    @JANSSON_LIBS@
 
 libcommon_la_LDFLAGS = \
     -DLDAP_DEPRECATED \
