MutentCA: Implemented revoke certificate api
*Added unit tests
*Verified memcheck

Jira-Id: CNA-1961

Change-Id: I11537fbfc44cf59dd6a6d7810369b4c403c0b9a8

--- a/mutentca/tests/unit-tests/server/api/Makefile.am
+++ b/mutentca/tests/unit-tests/server/api/Makefile.am
@@ -35,4 +35,8 @@ testmutentcaapi_LDFLAGS = \
     -Wl,--wrap,LwCAKmGetPublickey \
     -Wl,--wrap,LwCAKmGetEncryptedKey \
     -Wl,--wrap,LwCAKmSignX509Cert \
-    -Wl,--wrap,LwCAKmSignX509Request
+    -Wl,--wrap,LwCAKmSignX509Request \
+    -Wl,--wrap,LwCADbCheckCertData \
+    -Wl,--wrap,LwCADbGetCACRLNumber \
+    -Wl,--wrap,LwCADbUpdateCACRLNumber \
+    -Wl,--wrap,LwCADbAddCertData
