--- a/mutentca/tests/unit-tests/server/db/test-mutentcadb-config/Makefile.am
+++ b/mutentca/tests/unit-tests/server/db/test-mutentcadb-config/Makefile.am
@@ -1,2 +1,4 @@
 dist_noinst_DATA = \
-    test-mutentcadb-config.json
+    test-mutentcadb-config.json \
+    test-postdb-config.json \
+    test-postplugin-config.json
