MutentCA: Implement SN Policy validation
- Created a new regexutil common api
- Implemented SN Policy validation
- Validation for match=inzone will be done in a subsequent commit

Jira ID: CNA-2943

Change-Id: I81943ee513c57433b15d124961c2ac419f1e5be9

--- a/mutentca/common/Makefile.am
+++ b/mutentca/common/Makefile.am
@@ -10,6 +10,7 @@ libcommon_la_SOURCES = \
     misc.c \
     opensslctx.c \
     pkcs.c \
+    regexutil.c \
     string.c \
     thread.c \
     token_util.c \
