Fix unit-tests for POST plugin deployment
Follow up for commit 1199a8c26937995ae62e0af93931459ba2d8b119. This
change allows the deployment of config files which are required for unit
tests to load the plugin.

Change-Id: Ic06e9731972fd7221aea4b464b272149be6f999e

--- a/configure.ac
+++ b/configure.ac
@@ -2042,6 +2042,12 @@ AC_CONFIG_LINKS([
                 mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-mutentcadb-config.json:mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-mutentcadb-config.json
                 ])
 AC_CONFIG_LINKS([
+                mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-postplugin-config.json:mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-postplugin-config.json
+                ])
+AC_CONFIG_LINKS([
+                mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-postdb-config.json:mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-postdb-config.json
+                ])
+AC_CONFIG_LINKS([
                 mutentca/tests/unit-tests/server/security/test-mutentcasecurity-config/test-mutentcasecurity-config.json:mutentca/tests/unit-tests/server/security/test-mutentcasecurity-config/test-mutentcasecurity-config.json
                 ])
 AC_CONFIG_LINKS([
