--- a/mutentca/server/mutentca/Makefile.am
+++ b/mutentca/server/mutentca/Makefile.am
@@ -26,6 +26,7 @@ mutentcad_LDADD = \
     $(top_builddir)/mutentca/server/rest-head/libmutentcaresthead.la \
     $(top_builddir)/mutentca/server/common/libmutentcasrvcommon.la \
     $(top_builddir)/mutentca/server/config/libmutentcasrvconfig.la \
+    $(top_builddir)/mutentca/server/security/libmutentcasecurity.la \
     $(top_builddir)/mutentca/common/libcommon.la \
     $(top_builddir)/vmafd/client/libvmafdclient.la \
     @LWIO_LIBS@ \
