MutentCA: Implemented get CA CRL api
*Added unit tests
*Verified memcheck

Change-Id: I31a5e53b3d4876762a507a274d2dc8cadc09727d

--- a/mutentca/tests/unit-tests/server/api/Makefile.am
+++ b/mutentca/tests/unit-tests/server/api/Makefile.am
@@ -36,7 +36,9 @@ testmutentcaapi_LDFLAGS = \
     -Wl,--wrap,LwCAKmGetEncryptedKey \
     -Wl,--wrap,LwCAKmSignX509Cert \
     -Wl,--wrap,LwCAKmSignX509Request \
+    -Wl,--wrap,LwCAKmSignX509Crl \
     -Wl,--wrap,LwCADbCheckCertData \
     -Wl,--wrap,LwCADbGetCACRLNumber \
-    -Wl,--wrap,LwCADbUpdateCACRLNumber \
-    -Wl,--wrap,LwCADbAddCertData
+    -Wl,--wrap,LwCADbUpdateCA \
+    -Wl,--wrap,LwCADbAddCertData \
+    -Wl,--wrap,LwCADbGetCertData
