MutentCA: Implemented revoke intermediate ca api
*Added unit tests
*Verified memcheck

Jira-Id: CNA-1962, CNA-2520

Change-Id: I5d1396cf8a50c598219554e00e6f7ce08d52a827

--- a/mutentca/tests/unit-tests/server/api/Makefile.am
+++ b/mutentca/tests/unit-tests/server/api/Makefile.am
@@ -41,4 +41,6 @@ testmutentcaapi_LDFLAGS = \
     -Wl,--wrap,LwCADbGetCACRLNumber \
     -Wl,--wrap,LwCADbUpdateCA \
     -Wl,--wrap,LwCADbAddCertData \
-    -Wl,--wrap,LwCADbGetCertData
+    -Wl,--wrap,LwCADbGetCertData \
+    -Wl,--wrap,LwCADbGetParentCAId \
+    -Wl,--wrap,LwCADbUpdateCAStatus
