MutentCA: Wired the rest CA module
Change-Id: I11f48ac8828b6ed0ea6946801a68708013840b2c

--- a/mutentca/server/rest-head/Makefile.am
+++ b/mutentca/server/rest-head/Makefile.am
@@ -39,6 +39,7 @@ libmutentcaresthead_la_LIBADD = \
     $(top_builddir)/mutentca/common/libcommon.la \
     $(top_builddir)/mutentca/server/common/libmutentcasrvcommon.la \
     $(top_builddir)/mutentca/server/oidc-auth/libmutentcaoidc.la \
+    $(top_builddir)/mutentca/server/api/libmutentcaapi.la \
     @OPENSSL_LIBS@ \
     @DL_LIBS@
 
