wire up security implementation
Change-Id: I14cf3bd79a9da79b93f8298b08e8c179feb16d69

--- a/mutentca/server/security/Makefile.am
+++ b/mutentca/server/security/Makefile.am
@@ -2,9 +2,11 @@ noinst_LTLIBRARIES = libmutentcasecurity.la
 
 libmutentcasecurity_la_SOURCES = \
     globals.c \
-    security.c
+    security.c \
+    storage.c
 
 libmutentcasecurity_la_CPPFLAGS = \
+    -I$(top_srcdir)/vmcommon/include/public \
     -I$(top_srcdir)/mutentca/include \
     -I$(top_srcdir)/mutentca/include/public \
     -I$(top_srcdir)/mutentca/server/include \
@@ -12,7 +14,12 @@ libmutentcasecurity_la_CPPFLAGS = \
     @LW_INCLUDES@
 
 libmutentcasecurity_la_LIBADD = \
+    $(top_builddir)/vmcommon/libvmcommon.la \
     $(top_builddir)/mutentca/common/libcommon.la \
     $(top_builddir)/mutentca/server/common/libmutentcasrvcommon.la \
     $(top_builddir)/mutentca/server/plugin/libmutentcasrvplugin.la \
+    @LWBASE_LIBS@ \
     @DL_LIBS@
+
+libmutentcasecurity_la_LDFLAGS = \
+    @LW_LDFLAGS@
