MutentCA: Policy Validation unit-tests
- Fixed some issues in the current validation code
- Added unit tests for various types of policy validations with
  different scenarios

Jira ID: CNA-2001

Change-Id: Ib025efc4920e7b610e4aebf2f2a0ba6bc8e11c66

--- a/mutentca/tests/unit-tests/server/policy/Makefile.am
+++ b/mutentca/tests/unit-tests/server/policy/Makefile.am
@@ -6,7 +6,8 @@ TESTS = testmutentcapolicy
 testmutentcapolicy_SOURCES = \
     main.c \
     parse.c \
-    util.c
+    util.c \
+    validate.c
 
 testmutentcapolicy_CPPFLAGS = \
     -I$(top_srcdir)/mutentca/include \
