--- a/mutentca/common/Makefile.am
+++ b/mutentca/common/Makefile.am
@@ -24,6 +24,7 @@ libcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/vmafd/include/public \
     -I$(top_srcdir)/vmidentity/ssoclients/oidc/include/public \
     -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
+    -I$(top_srcdir)/vmcommon/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@ \
     @JANSSON_INCLUDES@
