MutentCA Default Lightwave AuthZ Checks
* Implement Lightwave authorization checks for MutentCA APIs:
    * Create CA: must be a member of CAAdmins or CAOperators
    * Revoke CA: must be a member of CAAdmins
    * CSR: must be a Lightwave user requesting a cert for the same
    tenant in which they belong
    * CRL: must be a member of CAAdmins

Jira ID: CNA-1898
Jira ID: CNA-2226

Change-Id: Id743b016b7007915fc21475ca796596b3401b58b

--- a/mutentca/server/authz/Makefile.am
+++ b/mutentca/server/authz/Makefile.am
@@ -2,7 +2,8 @@ noinst_LTLIBRARIES = libmutentcaauthz.la
 
 libmutentcaauthz_la_SOURCES = \
     authz.c \
-    globals.c
+    globals.c \
+    lightwave-authz.c
 
 libmutentcaauthz_la_CPPFLAGS = \
     -I$(top_srcdir)/mutentca/include \
