Integrating policy engine with mutentca code
- Added mutentca config file
- Modified mutentca policy config file
- Added policy engine init/shutdown on mutentca init/shutdown
- Added Policy Validate function in GetSignedCertificate and
  CreateIntermediateCA APIs
- Implemented and used new API to get certificate duration from
  policy engine
- Updated api unit tests by mocking the policy validate calls

Jira ID: CNA-1968

Change-Id: I17ca1af54affae2ca0d75fac8b2c2be897e65288

--- a/mutentca/server/api/Makefile.am
+++ b/mutentca/server/api/Makefile.am
@@ -15,6 +15,7 @@ libmutentcaapi_la_LIBADD = \
     $(top_builddir)/mutentca/server/common/libmutentcasrvcommon.la \
     $(top_builddir)/mutentca/server/db/libmutentcadb.la \
     $(top_builddir)/mutentca/server/security/libmutentcasecurity.la \
+    $(top_builddir)/mutentca/server/policy/libmutentcapolicy.la \
     @DL_LIBS@
 
 libmutentcaapi_la_LDFLAGS = \
