--- a/mutentca/config/Makefile.am
+++ b/mutentca/config/Makefile.am
@@ -1,5 +1,7 @@
 mutentcaconf_DATA = \
     mutentca.reg  \
+    mutentcaconfig.json \
+    mutentca-policy.json \
     mutentca-rest.json \
     mutentca-schema.ldif \
     mutentcad-syslog-ng.conf \
